--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
                         </div>
                     </div>
                 </section>
-                <section class="bg-dark py-2">
+<!--                 <section class="bg-dark py-2">
                     <div class="container">
                         <div class="row text-center justify-content-center">
                             <div class="col-auto">
@@ -702,8 +702,7 @@
                             </div>
                         </div>
                     </div>
-                    <!-- end of .container-->
-                </section>
+                </section> -->
                 <!-- <section> close ============================-->
                 <!-- ============================================-->
 
