--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                                 <h1 class="display-2 text-white font-weight-medium fs-xl-0 fs-md-0 fs-0 mt-4 mt-md-0">
                                     <span class="d-inline-block position-relative">Our Success Stories</h1>
                                     <h1
-                                        class="display-2 text-white font-weight-bold fs-xl-10 fs-md-8 fs-6 mt-4 mt-md-0">
+                                        class="display-2 text-white font-weight-bold fs-xl-10 fs-md-8 fs-4 mt-4 mt-md-0">
                                         <span class="d-inline-block position-relative">START WITH YOU </span class="heading-shapes heading-shapes-right d-none d-md-block" style="background-image: url(assets/img/illustrations/shapes-1.png); height: 80px; width: 90px"></span><br/></h1>
                                     <p
                                         class="fs-md-0 fs-0 text-capitalize mt-4 mx-auto"
@@ -148,7 +148,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="row justify-content-center" style="z-index: 100; position: relative;">
+<!--                         <div class="row justify-content-center" style="z-index: 100; position: relative;">
                             <div class="col-xxl-10 col-xl-9 col-lg-8 col-10 mb-md-4 mb-lg-0 text-center">
                                 <h6 class="mb-xxl-6 mb-xl-5 mb-lg-4 mb-md-4 text-800 font-weight-medium fs-md-0 fs--1 position-relative z-index-1">
                                     trusted by companies like this
@@ -162,7 +162,7 @@
                                     <img class="img-fluid" src="assets/img/logos/vivion.png" alt="" width="191"/>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                 </section>
 
@@ -179,7 +179,7 @@
                                 <div class="row justify-content-center">
                                     <div class="col-xxl-7 col-xl-9 col-lg-9 col-md-10 mb-4" data-aos="fade-up" data-aos-delay="0">
                                         <h1 class="font-weight-bold text-dark fs-xl-5 fs-lg-4 fs-sm-3 fs-1">
-                                            <span class="position-relative">Community for Digital Artist & Creators<span class="heading-shapes heading-shapes-right"></span></span><br/>
+                                            <span class="position-relative">Community for Digital Artist & Creators<span class="heading-shapes heading-shapes-right"></span></span>
                                             <span>Based in Bali, Indonesia</span></h1>
                                         <p class="text-900 mt-4 mx-auto">Padma
                                             Studio Community empowers you to learn and master webtoon background design,
