--- a/index.html
+++ b/index.html
@@ -189,40 +189,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- <div
-                            class="row justify-content-center" data-aos="fade-up" data-aos-delay="0">
-                            <div class="col pt-7">
-                                <img
-                                    class="position-absolute d-none d-md-block t-0"
-                                    src="assets/img/illustrations/home/home-vector-1.png"
-                                    alt=""
-                                    style="left:14%; width:16%;"/>
-                                <img
-                                    class="position-absolute d-none d-md-block t-0"
-                                    src="assets/img/illustrations/home/home-vector-2.png"
-                                    alt=""
-                                    style="right:6%; width:24%;"/>
-                                <div class="row justify-content-center">
-                                    <div class="col-md-8 col-10">
-                                        <img
-                                            class="jhiri-left-top"
-                                            src="assets/img/illustrations/home/"
-                                            alt=""
-                                            style="width:13%"/>
-                                        <div
-                                            class="rounded-soft overflow-hidden"
-                                            data-zanim-xs='{"delay":0.7,"duration":1.5}'>
-                                            <video
-                                                class="player"
-                                                poster="assets/img/bg-img/home-video-bg.png"
-                                                playsinline="playsinline"
-                                                controls="controls">
-                                                <source src="assets/video/beach.mp4" type="video/mp4"/></video>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div> -->
                         <div class="row mt-7 justify-content-center" data-aos="fade-up" data-aos-delay="1">
                             <div class="col-lg-4 col-md-6 mb-4 mb-lg-0">
                                 <div class="media p-xxl-4"><img src="assets/img/icons/icon-1.png" alt="" width="60"/>
@@ -327,10 +293,6 @@
                     <div class="container">
                         <div
                             class="row flex-center text-center text-lg-left" data-aos="fade-up" data-aos-delay="0">
-                            <!-- <div class="col-xl-6 col-lg-5 col-10 mb-6 mb-lg-0"
-                            data-zanim-lg='{"animation":"slide-right","delay":0.5,"duration":1.5}'
-                            data-zanim-xs='{"delay":0.4,"duration":1.5}'> <img class="object-cover w-100"
-                            src="assets/img/gallery/mac-sketchup.png" /> </div> -->
                             <div
                                 class="col-xl col-lg-7 col-10"
                                 data-zanim-lg='{"animation":"slide-left","delay":0.5,"duration":1.5}'
@@ -421,7 +383,7 @@
                                     <h1 class="font-weight-bold text-dark fs-xxl-5 fs-4">
                                         <span class="position-relative">Excited about our team?<span
                                             class="heading-shapes heading-shapes-right"
-                                            style="background-image: url(assets/img/illustrations/shapes-13.png); height: 80px; width: 90px"></span></span><br/>we are hiring!</h1>
+                                            style="background-image: url; height: 80px; width: 90px"></span></span><br/>we are hiring!</h1>
                                     <p class="text-900 mt-4 w-lg-75 mx-lg-auto mx-xl-0">We are looking for a passionate digital talents who are dedicated to delivering exceptional service, ensuring a seamless and impactful experience for our customer</p>
                                     <!-- <h3 class="mt-lg-7 mt-5 fs-lg-3 fs-2 mb-4">Excited about our team?<br />we
                                     are hiring!</h3> -->
